--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables": "9.0",
         "yajra/laravel-datatables-oracle": "10.0",
         "yoeunes/toastr": "^2.0"
-
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
